--- a/Home.html
+++ b/Home.html
@@ -79,7 +79,7 @@
               <a class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1" href="t.me/AinCradNetwork" target="_blank" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">Our Home<br>AinCrad Network
               </a>
             </h1>
-            <h2 class="u-text u-text-white u-text-2">Weebs • Community • Bots • Learning • Awareness<span style="font-weight: 700;"></span> •&nbsp;
+            <h2 class="u-text u-text-white u-text-2">Tamil • Weebs • Community<span style="font-weight: 700;"></span> •&nbsp;
             </h2>
           </div>
         </div>
@@ -96,7 +96,7 @@
 	c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z"></path><path style="fill:#ED7161;" d="M6,18.078c-0.553,0-1-0.447-1-1c0-5.514,4.486-10,10-10c0.553,0,1,0.447,1,1s-0.447,1-1,1
 	c-4.411,0-8,3.589-8,8C7,17.631,6.553,18.078,6,18.078z"></path></svg></span>
                   <h2 class="u-custom-font u-font-oswald u-text u-text-1">Weebs</h2>
-                  <p class="u-text u-text-2">A Communty built by weebs for weebs to support growth and knowledge with learnig</p>
+                  <p class="u-text u-text-2">A Communty built by X-Force for Tamil Otakus to support growth </p>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-grey-15 u-layout-cell u-size-20 u-size-20-md u-layout-cell-2">
@@ -114,7 +114,7 @@
               <div class="u-align-center u-container-style u-grey-40 u-layout-cell u-right-cell u-size-20 u-size-20-md u-layout-cell-3">
                 <div class="u-container-layout u-container-layout-3"><span class="u-icon u-icon-circle u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 60 60" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-95db"></use></svg><svg class="u-svg-content" viewBox="0 0 60 60" x="0px" y="0px" id="svg-95db" style="enable-background:new 0 0 60 60;"><path style="fill:none;stroke:#DC9628;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" d="M34,12  V8c0-2.209-1.791-4-4-4s-4,1.791-4,4v4.072"></path><path style="fill:#EEAF4B;" d="M16.491,50.638c10.701,1.847,16.658,1.847,27.36,0L53.341,49l0,0c-4.685-4.657-7.317-10.415-7.317-17  v-9c0.038-6.047-3.957-10.478-7.946-12.301c-4.999-2.285-10.815-2.294-15.806,0.008C18.319,12.53,14.038,16.958,14,23v9  c0,6.585-2.315,12.343-7,17l0,0L16.491,50.638z"></path><path style="fill:#FBD490;" d="M19,25.991c-0.002,0-0.004,0-0.006,0c-0.552-0.004-0.997-0.454-0.994-1.006  c0.03-4.682,3.752-7.643,5.948-8.654c3.849-1.775,8.594-1.772,12.469-0.002c0.502,0.229,0.723,0.822,0.494,1.325  c-0.229,0.502-0.822,0.724-1.326,0.493c-3.354-1.533-7.469-1.537-10.799,0c-1.767,0.814-4.762,3.173-4.785,6.85  C19.997,25.547,19.549,25.991,19,25.991z"></path><path style="fill:#DC9628;" d="M21.906,51.46C23.35,54.728,26.508,57,30.183,57c3.676,0,6.834-2.273,8.278-5.543  C32.533,52.209,27.83,52.21,21.906,51.46z"></path><path style="fill:#F2ECBF;" d="M4.095,39.967c-0.256,0-0.512-0.098-0.707-0.293C1.203,37.489,0,34.58,0,31.483  c0-3.098,1.203-6.006,3.388-8.19c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414C2.995,26.514,2,28.92,2,31.483  c0,2.563,0.995,4.969,2.802,6.776c0.391,0.391,0.391,1.023,0,1.414C4.606,39.869,4.351,39.967,4.095,39.967z"></path><path style="fill:#F2ECBF;" d="M8.305,37.69c-0.256,0-0.512-0.098-0.707-0.293c-3.337-3.337-3.337-8.768,0-12.104  c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414c-2.558,2.558-2.558,6.719,0,9.276c0.391,0.391,0.391,1.023,0,1.414  C8.817,37.593,8.561,37.69,8.305,37.69z"></path><path style="fill:#F2ECBF;" d="M55.905,39.967c-0.256,0-0.512-0.098-0.707-0.293c-0.391-0.391-0.391-1.023,0-1.414  C57.005,36.452,58,34.046,58,31.483c0-2.563-0.995-4.97-2.802-6.776c-0.391-0.391-0.391-1.023,0-1.414s1.023-0.391,1.414,0  C58.797,25.478,60,28.386,60,31.483c0,3.097-1.203,6.006-3.388,8.19C56.417,39.869,56.161,39.967,55.905,39.967z"></path><path style="fill:#F2ECBF;" d="M51.695,37.69c-0.256,0-0.512-0.098-0.707-0.293c-0.391-0.391-0.391-1.023,0-1.414  c2.558-2.558,2.558-6.719,0-9.276c-0.391-0.391-0.391-1.023,0-1.414s1.023-0.391,1.414,0c3.337,3.337,3.337,8.768,0,12.104  C52.207,37.593,51.951,37.69,51.695,37.69z"></path></svg></span>
                   <h2 class="u-custom-font u-font-oswald u-text u-text-5">Responsive</h2>
-                  <p class="u-text u-text-6">Active members and fast responding support</p>
+                  <p class="u-text u-text-6">Anitubers • Tamil Amv Creators • Tamil Mc Creators</p>
                 </div>
               </div>
             </div>
@@ -131,13 +131,13 @@
                 <div class="u-container-layout u-container-layout-1">
                   <h5 class="u-text u-text-1">WE ARE&nbsp;CREATIVE</h5>
                   <h2 class="u-custom-font u-font-oswald u-text u-text-2">About us</h2>
-                  <p class="u-text u-text-3">Main branch found at 7th of August 2021...<br>The network started to prosper slowly where&nbsp;<br>the core members were<br>Owner- <a href="https://t.me/godlydemon" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">Sung Jin-Woo</a>
+                  <p class="u-text u-text-3">Main branch found at 7th of August 2021...<br>The network started to prosper slowly where&nbsp;<br>the core members were<br>Founder- <a href="https://t.me/God_STB" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">STB</a>
                     <br>Co-Owners -&nbsp;<br>
-                    <a href="https://t.me/dojeto" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Dojeto</a>
+                    <a href="Whatsapplinkgoeshere" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Whatsapp</a>
                     <br>
-                    <a href="t.me/tamilvip007" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">Indrajith</a>
+                    <a href="t.me/XForceNetwork" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">Telegram</a>
                     <br>
-                    <a href="t.me/evilsunny" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4">Evil Sunny</a>
+                    <a href="InstaLinkGoeshere" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4">Instagram</a>
                   </p>
                 </div>
               </div>
@@ -154,7 +154,7 @@
         <div class="u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-align-center u-custom-font u-font-oswald u-text u-text-1">What we aim?</h2>
-            <p class="u-align-center u-text u-text-2">WE BELIEVE IN THE TRANSFORMATIVE POWER OF PEOPLE COMING TOGETHER. AS A SINGLE NETWORK,&nbsp;WE UNITE PEOPLE, MORALS AND IDEAS&nbsp;THROUGH EXTRAORDINARY GATHERINGS THAT IGNITE WILL FIRE.<br>A UNITED COMMMUNITY BY WEEBS AND MORE
+            <p class="u-align-center u-text u-text-2">WE BELIEVE IN THE TRANSFORMATIVE POWER OF PEOPLE COMING TOGETHER. AS A SINGLE NETWORK,&nbsp;WE UNITE PEOPLE, MORALS AND IDEAS&nbsp;THROUGH EXTRAORDINARY GATHERINGS THAT IGNITE WILL FIRE.<br>A UNITED COMMMUNITY BY TAMIL WEEBS AND MORE
             </p>
           </div>
         </div>
@@ -288,7 +288,7 @@
 	C22.602,0.567,25.338,0.567,26.285,2.486z"></path></svg></span>
                       <p class="u-small-text u-text u-text-variant u-text-1">WE ENSURE PROPER SERVICE FOR THE PEOPLE AND BY THE PEOPLE SO THAT NONE IS LEFT UNSERVED...<br>HELPING EACH OTHER TO ENSURE GROWTH...<span style="font-size: 1.25rem;"></span>
                       </p>
-                      <p class="u-text u-text-2">Sung Jin-Woo</p>
+                      <p class="u-text u-text-2">STB</p>
                     </div>
                   </div>
                 </div>
@@ -359,7 +359,7 @@
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg></span>
                           <h3 class="u-custom-font u-font-oswald u-text u-text-9">Chats and&nbsp; Channels</h3>
                           <p class="u-text u-text-10">
-                            <a class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-4" href="https://t.me/AinCradNetwork/11">A wide variety of chat groups and channels<br>to entertain you...
+                            <a class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-4" href="https://t.me/XForceNetwork">A wide variety of chat groups and channels<br>to entertain you...
                             </a>
                           </p>
                         </div>
